Cleaned up the network interface, added date to header

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-*.9-pre1
-*.pro.user
+Plan3.pro.user
+build-app-Desktop_Qt_5_10_1_MinGW_32bit-Debug/
+*.user
+app/include/flexseastackold/
+build-app-Desktop_Qt_5_10_1_MinGW_32bit-Release/
+app/lib/regularlib/FlexSEA-Stack-Plan.dll
+app/lib/debuglib/FlexSEA-Stack-Plan.dll
+build-fx_plan_stack-Desktop_Qt_5_10_1_MinGW_32bit-Debug/
+*.orig
+*.o
+*.Release
+*.Debug
+*.stash
+build/
+
+gui_settings\.sh
